# dataviz-mapeamento-criminalidade

./: .gitignore  README.md  pyproject.toml  tasks.py
data/processed/: dt_estudo.csv
data/processed/sspds-ce/: dataset_consolidado.csv  dataset_consolidado_estudo.csv
notebooks/: 00-pre-processamento.ipynb  01-analise-exploratoria.ipynb  sobre.ipynb
src/data/: Extracao.py  GraficoHelper.py  ManipularArquivo.py
