[tool.poetry]
name = "src"
version = "0.1.0"
description = "Estudo de Mapeamento de Crimes no Ceará"
authors = ["Carlos Pereira <alcarlosp@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
jupyterlab = "^3.2.0"
numpy = "^1.21.2"
pandas = "^1.3.3"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
matplotlib = "3.1.3"
seaborn = "0.11.0"
tika = "^1.24"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
